# tmonks

./: Cargo.toml  README.md
.context/compound-engineering/ce-review/run-1779568093/: review.md
assets/: main.css  main.js
docs/: SEARCH.md
docs/plans/: 2026-05-23-001-feat-tmonks-web-ui-tmux-sessions-plan.md  2026-05-23-001-feat-tmons-web-ui-tmux-sessions-plan.md
src/: assets.rs  auth.rs  cli.rs  lib.rs  main.rs  observability.rs  server.rs  ws_dashboard.rs  ws_pane.rs
src/status/: matchers.rs  mod.rs  poller.rs  version_probe.rs
src/templates/: mod.rs
src/tmux/: commands.rs  control_mode.rs  escape.rs  events.rs  mod.rs  parser.rs  version.rs
src/vt_filter/: inbound.rs  mod.rs  outbound.rs
tests/: auth.rs  status_matchers.rs  tmux_integration.rs  tmux_parser.rs  vt_filter.rs  ws_dashboard.rs  ws_pane.rs
tests/fixtures/claude/: idle-notify.txt  idle.txt  needs-input.txt  working.txt
tests/fixtures/codex/: idle.txt  needs-input.txt  working.txt
tests/fixtures/opencode/: idle.txt  working.txt
